<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/text_view_recipe_create_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_new_recipe"
        android:onClick="createNewRecipe"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/text_view_recipes_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:textSize="40sp"/>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_height="wrap_content"
            android:id="@+id/layout_recipes_list">

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
