<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_create_new_recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/layout_add_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/recipe_view_recipe_name"
            android:layout_weight="1"
            android:textSize="40sp"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <LinearLayout
            android:id="@+id/layout_view_ingredients"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/text_view_ingredients"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:textSize="40sp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layout_recipes_view_ingredients">

            </LinearLayout>


            <TextView
                android:text="@string/text_view_cooking_steps"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:textSize="40sp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layout_recipes_view_cooking_steps">

            </LinearLayout>

            <TextView
                android:text="@string/text_view_interactions"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:textSize="40sp" />

            <LinearLayout
                android:id="@+id/layout_view_interactions"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_add_interaction"
                android:onClick="add_recipe_interaction"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
